[package]
name = "grpc-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
crossbeam = "0.8.4"
futures = "0.3.30"
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
log = "0.4.21"
log4rs = "1.3.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
utils = { git = "https://github.com/johnietre/utils" }
