workspace = { members = ["proxy"] }
[package]
name = "grpc-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grpc-proxy"
path = "rust/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
async-std = "1.12.0"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
crossbeam = "0.8.4"
dashmap = "5.5.3"
futures = "0.3.30"
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
log = "0.4.21"
log4rs = "1.3.0"
pin-project = "1.1.5"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
#tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
utils = { git = "https://github.com/johnietre/utils" }

console-subscriber = { version = "*" }
tokio = { version = "1.37.0", features = ["full", "tracing"] }
