[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "proxy"
path = "rust/main.rs"

[dependencies]
async-std = "1.12.0"
h2 = { version = "0.4.5", features = ["stream"] }
tokio = { version = "1.37.0", features = ["full"] }
